--- a/public/styles.css
+++ b/public/styles.css
@@ -32,7 +32,7 @@ body {
   width: 100%;
   max-width: 400px;
 }
-
+/*  */
 /* Container du chat */
 .chat-container {
   background-color: rgb(166, 183, 240);
